workspace = { members = ["advent", "advent-utils"] }
[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
retainer = "0.3.0"
advent = {path = "./advent"}
advent-utils = {path = "./advent-utils"}
inventory = "0.3.13"
